feat: unenroll an asset and its rule definitions
